# DOI-downlaodv3

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  setup.ps1
.github/workflows/: build.yml
building/: README.md  build_linux.sh  build_macos.sh  build_windows.ps1  post_process.py
building/Windows/: SciHubEVA-x86_64.iss  SciHubEVA.win.version
building/macOS/: Info.plist
i18n/: SciHubEVA_pt_PT.ts  SciHubEVA_zh_CN.ts
scihub_eva/api/: scihub_api.py  scihub_fake_server.py
scihub_eva/core/: manager.py
scihub_eva/globals/: preferences.py  versions.py
scihub_eva/ui/: add_scihub_url.py  captcha.py  main.py  nicegui_main.py  preferences.py
scihub_eva/utils/: api_utils.py  download_log.py  logging_utils.py  network_utils.py  path_utils.py  preferences_utils.py  sys_utils.py  ui_utils.py
ui/: SciHubEVA.qml
